; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_indexcmds.c_ReindexTable.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_indexcmds.c_ReindexTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@ShareUpdateExclusiveLock = common dso_local global i32 0, align 4
@ShareLock = common dso_local global i32 0, align 4
@RangeVarCallbackOwnsTable = common dso_local global i32 0, align 4
@NOTICE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [61 x i8] c"table \22%s\22 has no indexes that can be reindexed concurrently\00", align 1
@REINDEX_REL_PROCESS_TOAST = common dso_local global i32 0, align 4
@REINDEX_REL_CHECK_CONSTRAINTS = common dso_local global i32 0, align 4
@REINDEXOPT_REPORT_PROGRESS = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [37 x i8] c"table \22%s\22 has no indexes to reindex\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ReindexTable(%struct.TYPE_4__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %10 = load i32, i32* %6, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %3
  %13 = load i32, i32* @ShareUpdateExclusiveLock, align 4
  br label %16

14:                                               ; preds = %3
  %15 = load i32, i32* @ShareLock, align 4
  br label %16

16:                                               ; preds = %14, %12
  %17 = phi i32 [ %13, %12 ], [ %15, %14 ]
  %18 = load i32, i32* @RangeVarCallbackOwnsTable, align 4
  %19 = call i32 @RangeVarGetRelidExtended(%struct.TYPE_4__* %9, i32 %17, i32 0, i32 %18, i32* null)
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %6, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %36

22:                                               ; preds = %16
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %5, align 4
  %25 = call i32 @ReindexRelationConcurrently(i32 %23, i32 %24)
  store i32 %25, i32* %8, align 4
  %26 = load i32, i32* %8, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %35, label %28

28:                                               ; preds = %22
  %29 = load i32, i32* @NOTICE, align 4
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @errmsg(i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str, i64 0, i64 0), i32 %32)
  %34 = call i32 @ereport(i32 %29, i32 %33)
  br label %35

35:                                               ; preds = %28, %22
  br label %55

36:                                               ; preds = %16
  %37 = load i32, i32* %7, align 4
  %38 = load i32, i32* @REINDEX_REL_PROCESS_TOAST, align 4
  %39 = load i32, i32* @REINDEX_REL_CHECK_CONSTRAINTS, align 4
  %40 = or i32 %38, %39
  %41 = load i32, i32* %5, align 4
  %42 = load i32, i32* @REINDEXOPT_REPORT_PROGRESS, align 4
  %43 = or i32 %41, %42
  %44 = call i32 @reindex_relation(i32 %37, i32 %40, i32 %43)
  store i32 %44, i32* %8, align 4
  %45 = load i32, i32* %8, align 4
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %54, label %47

47:                                               ; preds = %36
  %48 = load i32, i32* @NOTICE, align 4
  %49 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %50 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  %52 = call i32 @errmsg(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.1, i64 0, i64 0), i32 %51)
  %53 = call i32 @ereport(i32 %48, i32 %52)
  br label %54

54:                                               ; preds = %47, %36
  br label %55

55:                                               ; preds = %54, %35
  %56 = load i32, i32* %7, align 4
  ret i32 %56
}

declare dso_local i32 @RangeVarGetRelidExtended(%struct.TYPE_4__*, i32, i32, i32, i32*) #1

declare dso_local i32 @ReindexRelationConcurrently(i32, i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*, i32) #1

declare dso_local i32 @reindex_relation(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
